# esp32c3-ota-experiment

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
partitions-macro/: Cargo.toml
partitions-macro/src/: lib.rs
src/: main.rs  ota.rs  tiny_http.rs
