[package]
name = "esp32_ota_experiment"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = 3

[dependencies]
esp32-hal = "0.10.0"

esp-wifi = { git = "https://github.com/esp-rs/esp-wifi.git", features = ["esp32", "embedded-svc", "wifi"], rev = "76ba312b55b841cbbe9090c4f8dfb12ad379bb38" }
smoltcp = { version = "0.9.1", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
embedded-svc = { version = "0.23.1", default-features = false}
log = "0.4.16"
embedded-hal = "0.2"
esp-println = {version="0.4.0", features = [ "esp32", "uart", "log"] }
esp-backtrace = {version="0.6.0", features = [ "esp32", "print-uart", "panic-handler"] }
esp-storage = { version = "0.1.0", features = ["esp32"] }
embedded-storage = "0.3.0"
crc = "3.0.0"
embedded-io = "0.4.0"
heapless = "0.7.16"

partitions-macro = { path = "./partitions-macro" }

[patch.crates-io]
#esp32-hal = { path = "/projects/esp/esp-hal/esp32-hal" }
#esp-hal-common = { path = "/projects/esp/esp-hal/esp-hal-common" }
esp-storage = { git = "https://github.com/esp-rs/esp-storage" }

#[patch.'https://github.com/esp-rs/esp-wifi.git']
#esp-wifi = { path = "/projects/esp/esp-wifi/esp-wifi" }
